--- a/1_week_mission/signUp/src/styles.css
+++ b/1_week_mission/signUp/src/styles.css
@@ -44,3 +44,41 @@ button:hover {
   color: red;
   font-size: 12px;
 }
+
+.modal-wrapper {
+  position: fixed;
+
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 100%;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+.modal {
+  width: 320px;
+
+  padding: 24px 16px;
+  border-radius: 6px;
+
+  background-color: white;
+}
+
+.modal-title {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.modal p {
+  font-size: 13px;
+}
+
+.close-wrapper {
+  text-align: right;
+}
