--- a/1_week_mission/toDoList/src/styles.css
+++ b/1_week_mission/toDoList/src/styles.css
@@ -1,6 +1,7 @@
 body {
   font-family: Arial, sans-serif;
 }
+
 .container {
   max-width: 600px;
   margin: 50px auto;
@@ -9,13 +10,27 @@ body {
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
+
+.list-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+}
+
+.list-item {
+  height: 700px;
+  width: 300px;
+}
+
 input[type="text"] {
-  width: calc(100% - 70px);
+  width: calc(100% - 20px);
   padding: 10px;
   border-radius: 5px 0 0 5px;
   border: 1px solid #ccc;
   font-size: 16px;
 }
+
 button {
   padding: 10px 15px;
   background-color: #4caf50;
@@ -25,14 +40,17 @@ button {
   cursor: pointer;
   font-size: 16px;
 }
+
 button:hover {
   background-color: #45a049;
 }
+
 .todo-list {
   margin-top: 20px;
   list-style-type: none;
   padding: 0;
 }
+
 .todo-item {
   display: flex;
   align-items: center;
@@ -40,9 +58,11 @@ button:hover {
   padding: 10px;
   border-bottom: 1px solid #ccc;
 }
+
 .delete-btn {
   background-color: #f44336;
 }
+
 .delete-btn:hover {
   background-color: #da190b;
 }
