--- a/1_week_mission/signUp/src/styles.css
+++ b/1_week_mission/signUp/src/styles.css
@@ -1,5 +1,5 @@
 .container {
-  max-width: 400px;
+  width: 400px;
   margin: 50px auto;
   padding: 20px;
   border: 1px solid #ccc;
@@ -7,6 +7,7 @@
 }
 
 .form-group {
+  width: 380px;
   margin-bottom: 15px;
 }
 
@@ -15,23 +16,24 @@ label {
   margin-bottom: 5px;
 }
 
-input[type="text"],
-input[type="email"],
-input[type="number"],
-input[type="password"] {
+input {
   width: 100%;
+  height: 16px;
   padding: 10px;
+
   border: 1px solid #ccc;
   border-radius: 5px;
 }
 
 button {
+  width: 100%;
   padding: 10px 20px;
   background-color: #007bff;
   color: #fff;
   border: none;
   border-radius: 5px;
   cursor: pointer;
+  font-size: 17px;
 }
 
 button:hover {
