--- a/week1_clug/join/style.css
+++ b/week1_clug/join/style.css
@@ -1,47 +1,74 @@
-.joinFormWrapper {
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    background: rgb(43, 240, 227);
-    top: 0;
-    left: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+body {
+    background-color: rgb(222, 252, 252);
 }
-.joinForm {
-    background: rgba(255, 255, 255, 0.9);
-    padding: 20px 70px;
-    border-radius: 4px;
-    width: 320px;
-    height: 350px;
+#container {
+    background-color: rgba(255, 255, 255, 0.9);
+    width: 250px;
+    height: 480px;
+    border-radius: 2%;
+    position:absolute;
+    top:100px;
+    left: 450px;
+    padding: 50px 150px;
+    
 }
-.join {
-    font-weight: bold;
-    font-size: large;
+hr {
+    text-align:center;
+    background-color:white;
+}
+#formTitle {
     text-align: center;
 }
-#form {
-    padding: 0px 50px;
-}
 span {
-    text-align: left;
+    font-weight: 500;
+    text-align:left;
 }
-#form input{
-    border: 5px solid white;
-    background-color: rgba(255, 255, 255, 0.9);
+input {
+    border-width:0.1;
+    text-align: center;
+    width:250px;
 }
-#btn input {
-    align-items: center;
-    position: absolute;
-    justify-content: center;
-    top: 65%;
-    left: 42%;
-    display: flex;
-    width: 150px;
+#btn {
+    text-align: center;
+}
+button {
+    margin-top:10px;
     background-color: gray;
-    border: white;
-    border-radius: 4px;
+    border-radius: 5px;
+    border: none;
+    width:200px;
     color: white;
-    height: 30px;
+    height:30px;
+}
+
+.modal-wrapper {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.modal {
+    background: white;
+    padding: 24px 16px;
+    border-radius: 4px;
+    width: 320px;
+}
+
+.modal-title {
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.modal p {
+    font-size: 16px;
+}
+
+.close-wrapper {
+    text-align: right;
 }
