--- a/week1_clug/toDoList/style.css
+++ b/week1_clug/toDoList/style.css
@@ -1,20 +1,47 @@
-h1 {
+body {
+    background-color: rgb(199, 247, 247);
+}
+#container {
+    margin:100px;
     text-align: center;
 }
-.container {
-    width: 50%;
-    text-align: center;
-    margin: 0 auto;
-}
-.list #todo{
-    text-align: left;
-}
-.list #comlete{
-    text-align: right;
-}
+
 input {
-    width: 400px;
-    height: 30px;
-    width: 100%;
-    border-color: rgb(99, 99, 166);
+    width: 600px;
+    height: 30px;;
+    border-radius: 3px;
+}
+#wrapper {
+    display: flex;
+    justify-content: center;
+    justify-content: space-evenly;
+}
+div>span {
+    font-weight: bold;
+    
+}
+#list {
+    font-weight: bold;
+    list-style: none;
+    padding-left:0px;
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-bottom: 10px;
+    text-align: left;
+    width: 150px;
+}
+#complete {
+    font-weight: bold;
+    list-style: none;
+    padding-left:0px;
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-bottom: 10px;
+    text-align: left;
+    width: 150px;
+}
+button {
+    float:right;
 }
