feat: submit week3 mission1

--- a/week3_clug/mission1/src/component/css/MainPage.css
+++ b/week3_clug/mission1/src/component/css/MainPage.css
@@ -3,11 +3,15 @@
     color:white;
     height: 150px;
     text-align: center;
+    display:flex;
+    align-items: center;
+    justify-content: center;
 }
 #text {
     color:white;
     font-weight: bolder;
     text-align: center;
+    padding:20px 20px;
 }
 .input {
     text-align: center;
